Fix background image bug on mobile

--- a/app/styles/components/_AddRecipe.scss
+++ b/app/styles/components/_AddRecipe.scss
@@ -4,8 +4,11 @@
 
 .add-recipe-input{
   line-height: 200%;
-  width: 50%;
-  
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #82ff91;
+
+
 }
 
 textarea{
