--- a/app/styles/components/_Recipe.scss
+++ b/app/styles/components/_Recipe.scss
@@ -3,6 +3,8 @@ $recipe-ingredients-color: #dd0000;
 $background: rgb(246, 246, 225);
 
 body{
+  margin: 0;
+  padding: 0;
   background-image: url('http://www.photos-public-domain.com/wp-content/uploads/2012/03/bamboo-cutting-board-texture.jpg');
   background-size: cover;
   background-repeat: no-repeat;
